client/infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-depl
  template:
    metadata:
      labels:
        app: client-depl
    spec:
      containers:
        - name: client
          image: mihirvir10/client
          ports:
            - containerPort: 5173
