client/infra/k8s/asd-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: asd-srv
spec:
  type: ClusterIP
  selector:
    app: asd-depl
  ports:
    - name: asd
      port: 9000
      targetPort:
      protocol: TCP
