client/infra/k8s/client-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client-depl
  ports:
    - name: client
      port: 8081
      targetPort: 
      protocol: TCP
